deployment-example-application/busybox.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
  namespace: workshop-basic-app
spec:
  containers:
  - name: busybox
    image: ghcr.io/containerd/busybox:1.36
    command: ["sleep", "3600"]
