deployment-example-application/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-api-service
  namespace: workshop-basic-app
spec:
  selector:
    app: flask-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
