deployment-example-application/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: flask-api-policy
  namespace: workshop-basic-app
spec:
  podSelector:
    matchLabels:
      app: flask-api
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: frontend
    ports:
    - protocol: TCP
      port: 80
